devops/colima/infrastructure/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
